# measurement-analysis-system

./: README.md
backend/: docker-compose.yml
backend/admin_pannel/: .gitignore  Dockerfile  config.yml  pyproject.toml
backend/admin_pannel/admin_pannel/: asgi.py  settings.py  urls.py  wsgi.py
backend/admin_pannel/locale/ru/LC_MESSAGES/: django.mo  django.po
backend/admin_pannel/measurement_system/: admin.py  apps.py  models.py
backend/admin_pannel/measurement_system/migrations/: 0001_initial.py  0002_alter_applicationarea_options_and_more.py  0002_associationtable_alter_regexsettings_options_and_more.py
backend/admin_pannel/scripts/: django-entrypoint.sh
backend/admin_pannel/templates/: change_list_graph.html
backend/docs/: architecture.puml  type_description.puml
backend/file_processor/: Dockerfile  app.py  config.py  config.yml  db.py  model.py  parser.py  pdf_parser.py  pyproject.toml  run_service.sh
backend/file_processor/for_model/: enc  fields_main_table.csv
backend/file_processor/models/: application_area.py  associated_table.py  regex_settings.py  type_description.py  verification.py
backend/measurement_gateway/: Dockerfile  pyproject.toml
backend/measurement_gateway/alembic/: env.py
backend/measurement_gateway/alembic/versions/: 0ac6d7cb4466_add_tables.py  8176649ea8f3_add_tables.py  93a8c4f5662e_add_tables.py  bc2793ea7a27_create_typedescription_table.py
backend/measurement_gateway/app/: containers.py  main.py
backend/measurement_gateway/app/api/v1/: type_description_api.py  verification_api.py
backend/measurement_gateway/app/core/: config.yml  init_app.py  logger.py
backend/measurement_gateway/app/db/: db.py  kafka.py
backend/measurement_gateway/app/models/sqalchemy/: application_area.py  associated_table.py  type_description.py  verification.py
backend/measurement_gateway/app/models/views/: file_process_message.py  type_description.py  verification.py
backend/measurement_gateway/app/repositories/: type_description_repository.py  verification_repository.py
backend/measurement_gateway/app/services/: type_description_service.py  verification_service.py
backend/measurement_gateway/scripts/: fastApi-entrypoint.sh
data_parser/: main.py  pyproject.toml  requirements.txt
model/: Classify_new.ipynb
model/for_model/: enc  fields_main_table.csv  vectorizer  vocab
