[tool.poetry]
name = "mesurement_gateway"
version = "0.1.0"
description = ""
authors = ["ilyakochankov <ilyakochankov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
dynaconf = "^3.1.8"
dependency-injector = "^4.39.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
fastapi-health = "^0.4.0"
greenlet = "^1.1.2"
alembic = "^1.8.0"
fastapi-utils = "^0.2.1"
email-validator = "^1.2.1"
python-multipart = "^0.0.5"
aiokafka = "^0.7.2"
python-snappy = "^0.6.1"
aiofiles = "^0.8.0"
asyncpg = "^0.25.0"
orjson = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
